feature update profile: code base
